--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,10 @@ yarn-error.log
 /.nova
 /.vscode
 /.zed
+bootstrap/compiled.php
+app/storage/
+public/storage
+public/hot
+public_html/storage
+public_html/hot
+storage/*.key
