--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^5.2.1",
+        "chart.js": "^4.4.7",
+        "chartjs-adapter-date-fns": "^3.0.0",
         "vue": "^3.5.13",
+        "vue-chartjs": "^5.3.2",
         "vue-router": "^4.5.0"
     }
 }
