--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "test": "vitest"
     },
     "devDependencies": {
+        "@vue/test-utils": "^2.4.6",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
+        "jsdom": "^26.0.0",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.47",
         "tailwindcss": "^3.4.13",
-        "vite": "^6.0"
+        "vite": "^6.0",
+        "vitest": "^2.1.8"
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^5.2.1",
